WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54145
WM_PRINT doesn't work with new drawing area (assertion failure in DrawingAreaProxyImpl in Debug builds)
https://bugs.webkit.org/show_bug.cgi?id=54145
Summary
WM_PRINT doesn't work with new drawing area (assertion failure in DrawingArea...
Adam Roben (:aroben)
Reported
2011-02-09 14:26:04 PST
WM_PRINT doesn't work with the new drawing area, and causes an asertion failure in DrawingAreaProxyImpl::paint(const WebCore::IntRect&, PlatformDrawingContext) in Debug builds. The assertion is an ASSERT_NOT_REACHED().
Attachments
Hook up WM_PRINT to the new drawing area
(8.04 KB, patch)
2011-02-09 14:31 PST
,
Adam Roben (:aroben)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-02-09 14:27:18 PST
<
rdar://problem/8979559
>
Adam Roben (:aroben)
Comment 2
2011-02-09 14:31:20 PST
Created
attachment 81876
[details]
Hook up WM_PRINT to the new drawing area
Adam Roben (:aroben)
Comment 3
2011-02-10 04:43:29 PST
Committed
r78200
: <
http://trac.webkit.org/changeset/78200
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug