Hook up WM_PRINT to the new drawing area

Fixes <http://webkit.org/b/54145> <rdar://problem/8979559> WM_PRINT doesn't work with new
drawing area (assertion failure in DrawingAreaProxyImpl in Debug builds)

Reviewed by Darin Adler.

Source/WebKit2:

* UIProcess/win/WebView.cpp:
(WebKit::WebView::paint): Added. Code came from onPaintEvent.

(WebKit::WebView::onPaintEvent):
(WebKit::WebView::onPrintClientEvent):
Changed to call paint.

* UIProcess/win/WebView.h: Added paint. Also separated message handler functions into their
own paragraph.

Tools:

Test that WM_PRINT doesn't trigger an assertion

* TestWebKitAPI/Tests/WebKit2/win/WMPrint.cpp: Added.
(TestWebKitAPI::TEST): Send a WM_PRINT message to a WKView.

Canonical link: https://commits.webkit.org/68218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78200 268f45cc-cd09-0410-ab3c-d52691b4dbfc